// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Render default - value[0] 2`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    Descriptions title
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`Render properties.bordered: true - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-bordered"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_one
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value one
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_two
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            2
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_three
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value three
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.colon: false - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label ant-descriptions-item-no-colon"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.column: 2 - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-list - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    Title
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              1
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              3
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-list-primitive - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    Title
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              1
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              1
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={2}
          >
            <span
              className="ant-descriptions-item-label"
            >
              2
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={3}
          >
            <span
              className="ant-descriptions-item-label"
            >
              3
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              3
            </span>
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={3}
          >
            <span
              className="ant-descriptions-item-label"
            >
              4
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              4
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-object - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    Title
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.items-object-object - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-title"
  >
    Title
  </div>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              {"two":3}
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              four
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              {"five":"six"}
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              seven
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              {"eight":[9,"ten"]}
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.layout: vertical - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
          </th>
          <th
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
          </th>
          <th
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
          </th>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: default - value[0] 1`] = `
<div
  className="ant-descriptions"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-small"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_one
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value one
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_two
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              2
            </span>
          </td>
          <td
            className="ant-descriptions-item"
            colSpan={1}
          >
            <span
              className="ant-descriptions-item-label"
            >
              field_three
            </span>
            <span
              className="ant-descriptions-item-content"
            >
              value three
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.size: small, properties.bordered: true - value[0] 1`] = `
<div
  className="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
>
  <div
    className="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_one
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value one
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_two
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            2
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_three
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value three
          </td>
        </tr>
        <tr
          className="ant-descriptions-row"
        >
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_4
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value 4
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_5
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            5
          </td>
          <th
            className="ant-descriptions-item-label"
            colSpan={1}
          >
            field_6
          </th>
          <td
            className="ant-descriptions-item-content"
            colSpan={1}
          >
            value 6
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema default 3`] = `true`;

exports[`Test Schema default 4`] = `null`;

exports[`Test Schema properties.bordered: true 1`] = `true`;

exports[`Test Schema properties.bordered: true 2`] = `null`;

exports[`Test Schema properties.colon: false 1`] = `true`;

exports[`Test Schema properties.colon: false 2`] = `null`;

exports[`Test Schema properties.column: 2 1`] = `true`;

exports[`Test Schema properties.column: 2 2`] = `null`;

exports[`Test Schema properties.items-list 1`] = `true`;

exports[`Test Schema properties.items-list 2`] = `null`;

exports[`Test Schema properties.items-list-primitive 1`] = `false`;

exports[`Test Schema properties.items-list-primitive 2`] = `
Array [
  Object {
    "dataPath": "/properties/items/0",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/0/items/type",
  },
  Object {
    "dataPath": "/properties/items/1",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/0/items/type",
  },
  Object {
    "dataPath": "/properties/items/2",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/0/items/type",
  },
  Object {
    "dataPath": "/properties/items/3",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/0/items/type",
  },
  Object {
    "dataPath": "/properties/items",
    "keyword": "type",
    "message": "should be object",
    "params": Object {
      "type": "object",
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf/1/type",
  },
  Object {
    "dataPath": "/properties/items",
    "keyword": "oneOf",
    "message": "should match exactly one schema in oneOf",
    "params": Object {
      "passingSchemas": null,
    },
    "schemaPath": "#/properties/properties/properties/items/oneOf",
  },
]
`;

exports[`Test Schema properties.items-object 1`] = `true`;

exports[`Test Schema properties.items-object 2`] = `null`;

exports[`Test Schema properties.items-object-object 1`] = `true`;

exports[`Test Schema properties.items-object-object 2`] = `null`;

exports[`Test Schema properties.layout: vertical 1`] = `true`;

exports[`Test Schema properties.layout: vertical 2`] = `null`;

exports[`Test Schema properties.size: default 1`] = `true`;

exports[`Test Schema properties.size: default 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.size: small, properties.bordered: true 1`] = `true`;

exports[`Test Schema properties.size: small, properties.bordered: true 2`] = `null`;
